--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: masyu_app
+name: Masyu
 description: A Masyu puzzle playing app.
 
 # The following defines the version and build number for your application.
