--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,12 +28,21 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.7.0"
 
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
 
 # The following section is specific to Flutter.
+flutter_icons:
+#  ios: true
+  android: true
+  image_path_ios: "assets/launcher/Masyu_icon.png"
+  image_path_android: "assets/launcher/Masyu_icon.png"
+#  adaptive_icon_background: "assets/launcher/background.png"
+  adaptive_icon_foreground: "assets/launcher/Masyu_icon.png"
+
 flutter:
 
   # The following line ensures that the Material Icons font is
